<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>br.com.caema</groupId>
    <artifactId>exportador-csv</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>exportador-csv</name>
    <description>Engine para executar SQL e gerar arquivos CSV</description>

    <!-- ========================= -->
    <!-- CONFIGURAÇÃO DE JAVA     -->
    <!-- ========================= -->
    <properties>
        <!-- ÚNICA fonte de verdade da versão Java.
             Java 8: e o runtime das maquinas que executam os jobs. Por isso o codigo
             evita record, var, List.of e Files.readString/writeString. -->
        <maven.compiler.release>8</maven.compiler.release>

        <!-- Encoding consistente -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <!-- ========================= -->
    <!-- DEPENDÊNCIAS             -->
    <!-- ========================= -->
    <dependencies>
        <!-- PostgreSQL JDBC -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.3</version>
        </dependency>

        <!-- Cliente FTP -->
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.10.0</version>
        </dependency>
    </dependencies>

    <!-- ========================= -->
    <!-- BUILD                    -->
    <!-- ========================= -->
    <build>
        <plugins>

            <!-- Compilador Java -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <!-- NÃO usar source/target -->
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>

            <!-- JAR executável com dependências -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>br.com.caema.ExportadorCsv</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>
